Retail Lending-Production/src/objects/Comments__c.object
<CustomObject>
    <fields>
        <fullName>Comment_Created_from__c</fullName>
        <label>Comment Created from</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_text__c</fullName>
        <label>Comments text</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Comments</label>
    <nameField>
        <displayFormat>c-{00}</displayFormat>
        <label>Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>